update: gomod
